--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     <canvas id="graphCanvas"></canvas>
     <div class="cursor"></div>
     <div class="cursor-follower"></div>
-    <div class="container">
+    
+    <!-- Landing Page -->
+    <div class="landing-page" id="landingPage">
+        <div class="landing-content">
+            <img src="src/LOGO.png" alt="Dan Logo" class="landing-logo">
+            <h1 class="landing-title">به دنیای دیجیتال خوش آمدید</h1>
+            <button class="start-btn" id="startBtn">شروع نیازسنجی</button>
+        </div>
+    </div>
+
+    <!-- Form Container -->
+    <div class="container" id="formContainer" style="display: none;">
         <header>
             <img src="src/LOGO.png" alt="Dan Logo" class="header-logo">
             <h1 style="display: none;">فرم نیازسنجی خدمات</h1>
